# tencentcloud-iot-explorer-sdk-embedded-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  astyle.bat  cmake_build.sh  device_info.json  make.settings
docs/: C-SDK_API及可变参数说明.md  C-SDK_Build编译环境及配置选项说明.md  Device_Auth设备接入认证.md  FAQ.md  MCU+腾讯云定制AT模组.md  mqtt_sample_快速入门.md  二进制数据上报.md  动态注册使用说明.md  文件管理协议设计.md  物模型数据模板动态解析体验例子说明.md  网关子设备场景示例说明.md  网关设备小程序自动智能本地联动.md  网关设备快速入门.md  腾讯连连小程序 WIFI 配网.md  设备固件升级.md  设备基础信息上报.md  设备接入QQ音乐.md  设备接入酷狗音乐.md  资源管理协议设计.md
docs/数据模板开发/: 数据模板代码生成.md  数据模板协议.md  数据模板应用开发.md
external_libs/cJSON/: CMakeLists.txt  Makefile
include/: config.h  gitinfo.h  lite-list.h  lite-utils.h  platform.h  qcloud_iot_export.h  qcloud_iot_export_variables.h  qcloud_iot_import.h  utils_getopt.h
include/exports/: qcloud_iot_export_asr.h  qcloud_iot_export_data_template.h  qcloud_iot_export_device_bind.h  qcloud_iot_export_error.h  qcloud_iot_export_file_manage.h  qcloud_iot_export_gateway.h  qcloud_iot_export_kgmusic.h  qcloud_iot_export_location.h  qcloud_iot_export_log.h  qcloud_iot_export_method.h  qcloud_iot_export_mqtt.h  qcloud_iot_export_ota.h  qcloud_iot_export_qqmusic.h  qcloud_iot_export_resource.h  qcloud_iot_export_system.h
platform/: CMakeLists.txt
platform/at_device/esp8266/: at_device_esp8266.c  at_device_esp8266.h
platform/os/freertos/: HAL_AT_UART_freertos.c  HAL_Device_freertos.c  HAL_OS_freertos.c  HAL_TCP_lwip.c  (+2 more)
platform/wifi_config_adapter/: HAL_Airkiss.c  HAL_BTCombo_config.c  HAL_Simple_config.c  HAL_Smart_config.c  HAL_Soft_ap.c  HAL_Wifi_api.c
samples/: CMakeLists.txt  Makefile
samples/asr/: asr_data_template_sample.c
samples/data_template/: action_config.c  data_config.c  data_template_config.c  data_template_config.h  data_template_sample.c  events_config.c
samples/dynreg_dev/: dynreg_dev_sample.c
samples/file_manage/: file_mqtt_sample.c
samples/gateway/: gateway_sample.c  sub_dev.c  sub_dev001.c  sub_product_data_template_config.c  sub_product_data_template_config.h
samples/kgmusic/: action_config.c  data_config.c  kgmusic_data_template_sample.c
samples/location/: data_config.c  location_sample.c
samples/mqtt/: mqtt_sample.c
samples/ota/: ota_mqtt_sample.c
samples/qqmusic/: action_config.c  data_config.c  qqmusic_data_template.c
samples/qt_samples/ota/: TencentIotForQt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  tencentiotcsdk.cpp  tencentiotcsdk.h
samples/qt_samples/qcloud_iot_c_sdk/include/: config.h  platform.h  qcloud_iot_import.h  utils_getopt.h
samples/qt_samples/qcloud_iot_c_sdk/include/exports/: qcloud_iot_export_device_bind.h  qcloud_iot_export_file_manage.h  qcloud_iot_export_kgmusic.h
samples/qt_samples/qcloud_iot_c_sdk/platform/linux/: HAL_OS_linux.c
samples/qt_samples/qcloud_iot_c_sdk/platform/windows/: HAL_AT_UART_win.c  HAL_Device_win.c  HAL_TCP_win.c  HAL_UDP_win.c
samples/qt_samples/qcloud_iot_c_sdk/sdk_src/: data_template_action.c  data_template_client.c  data_template_client_common.c  data_template_event.c  device_bind.c  dynreg.c  gateway_api.c  gateway_common.c  json_token.c  location.c  mqtt_client_common.c  mqtt_client_unsubscribe.c  network_interface.c  ota_lib.c  service_mqtt.c  utils_aes.c  utils_getopt.c  utils_list.c  utils_md5.c  utils_ringbuff.c  utils_timer.c
samples/qt_samples/qcloud_iot_c_sdk/sdk_src/internal_inc/: at_socket_inf.h  gateway_common.h  mqtt_client.h  ota_fetch.h  ota_lib.h  qcloud_wifi_config.h  qcloud_wifi_config_internal.h  service_mqtt.h  utils_url_download.h
samples/raw_data/: raw_data_sample.c
samples/resource/: resource_mqtt_sample.c
samples/scenarized/: dyn_parse_data_template_sample.c  gateway_sim_sample.c  light_data_template_config.c  light_data_template_config.h  light_data_template_sample.c  subdev_sim_sample.c
samples/wifi_config/: wifi_config_sample.c
sdk_src/: CMakeLists.txt
sdk_src/internal_inc/: asr_client.h  at_client.h  data_template_client.h  data_template_client_json.h  data_template_event.h  file_manage_client.h  gateway_common.h  log_upload.h  mqtt_client.h  ota_client.h  ota_lib.h  qcloud_iot_ca.h  qcloud_iot_common.h  qcloud_wifi_config.h  qcloud_wifi_config_internal.h  resource_client.h  service_mqtt.h  utils_bitmap.h  utils_hmac.h  utils_httpc.h  utils_list.h  utils_md5.h
sdk_src/network/: network_interface.c
sdk_src/network/at_socket/: at_client.c  at_socket_inf.c  at_utils.c  network_at_tcp.c
sdk_src/network/socket/: network_socket.c
sdk_src/network/tls/: network_tls.c
sdk_src/protocol/http/: utils_httpc.c  utils_url_download.c  utils_url_upload.c
sdk_src/protocol/mqtt/: mqtt_client.c  mqtt_client_common.c  mqtt_client_connect.c  mqtt_client_publish.c  mqtt_client_subscribe.c  mqtt_client_yield.c
sdk_src/services/asr/: asr_client.c
sdk_src/services/data_template/: data_template_aciton.c  data_template_action.c  data_template_client.c  data_template_client_json.c  data_template_client_manager.c  data_template_event.c
sdk_src/services/device_bind/: device_bind.c
sdk_src/services/dynreg/: dynreg.c
sdk_src/services/file_manage/: file_manage_client.c
sdk_src/services/gateway/: gateway_api.c  gateway_common.c
sdk_src/services/kgmusic/: kgmusic_client.c
sdk_src/services/log/: log_mqtt.c  log_upload.c
sdk_src/services/ota/: ota_client.c  ota_fetch.c  ota_lib.c  ota_mqtt.c
sdk_src/services/qqmusic/: qqmusic_client.c
sdk_src/services/resource/: resource_client.c  resource_mqtt.c
sdk_src/services/service_com/: service_mqtt.c
sdk_src/services/system/: system_mqtt.c
sdk_src/utils/: json_parser.c  json_token.c  qcloud_iot_ca.c  qcloud_iot_device.c  qcloud_iot_log.c  string_utils.c  utils_base64.c  utils_bitmap.c  utils_hmac.c  utils_list.c  utils_md5.c  utils_sha1.c
sdk_src/wifi_config/: qcloud_wifi_config.c  qcloud_wifi_config_comm_service.c  qcloud_wifi_config_device_bind.c  qcloud_wifi_config_error_handle.c  qcloud_wifi_config_log_handle.c
tools/: codegen.py  example_config.json
tools/build_scripts/: function_rename.sh  parse_make_settings.mk  rules.mk
tools/cmake_scripts/: config.h.in
(+35 files in other folders)
